--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -337,7 +337,7 @@
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-    max-width: 50%;
+    min-width: 50%;
   }
 
   .welcome-container {
