--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,11 @@
           </div>
 
           <div fxFlex fxLayoutAlign="flex-end center">
-            <a href="https://muggli.github.io/"><fa-icon [icon]="faGlobe" size="2x" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
-            <a href="https://muggli.github.io/life/"><fa-icon [icon]="faHeart" size="2x" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
-            <a href="https://github.com/muggli/"><fa-icon [icon]="faGithub" size="2x" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
-            <a href="https://www.linkedin.com/in/ryan-muggli/"><fa-icon [icon]="faLinkedin" size="2x" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
-            <a href="mailto:ryan.muggli@gmail.com"><fa-icon [icon]="faEnvelope" size="2x" [styles]="{'color': 'white', 'padding-right': '1em'}"></fa-icon></a>
+            <a href="https://muggli.github.io/"><fa-icon [icon]="faGlobe" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="https://muggli.github.io/life/"><fa-icon [icon]="faHeart" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="https://github.com/muggli/"><fa-icon [icon]="faGithub" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="https://www.linkedin.com/in/ryan-muggli/"><fa-icon [icon]="faLinkedin" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="mailto:ryan.muggli@gmail.com"><fa-icon [icon]="faEnvelope" size="lg" [styles]="{'color': 'white', 'padding-right': '1em'}"></fa-icon></a>
           </div>
         </div>
       </mat-toolbar-row>
