Size Icons based on Mobile or Desktop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,13 +15,22 @@
                 <span class="no-select">ALT Resources</span>
           </div>
 
-          <div fxFlex fxLayoutAlign="flex-end center">
+          <div fxFlex fxLayoutAlign="flex-end center" *ngIf="!isMobile">
             <a href="https://muggli.github.io/"><fa-icon [icon]="faGlobe" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
             <a href="https://muggli.github.io/life/"><fa-icon [icon]="faHeart" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
             <a href="https://github.com/muggli/"><fa-icon [icon]="faGithub" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
             <a href="https://www.linkedin.com/in/ryan-muggli/"><fa-icon [icon]="faLinkedin" size="lg" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
             <a href="mailto:ryan.muggli@gmail.com"><fa-icon [icon]="faEnvelope" size="lg" [styles]="{'color': 'white', 'padding-right': '1em'}"></fa-icon></a>
           </div>
+
+          <div fxFlex fxLayoutAlign="flex-end center" *ngIf="isMobile">
+            <a href="https://muggli.github.io/"><fa-icon  [icon]="faGlobe" size="xs" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="https://muggli.github.io/life/"><fa-icon [icon]="faHeart" size="xs" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="https://github.com/muggli/"><fa-icon [icon]="faGithub" size="xs" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="https://www.linkedin.com/in/ryan-muggli/"><fa-icon [icon]="faLinkedin" size="xs" [styles]="{'color': 'white', 'padding-right': '.5em'}"></fa-icon></a>
+            <a href="mailto:ryan.muggli@gmail.com"><fa-icon [icon]="faEnvelope" size="xs" [styles]="{'color': 'white', 'padding-right': '1em'}"></fa-icon></a>
+          </div>
+          
         </div>
       </mat-toolbar-row>
     </mat-toolbar>
