Adding dropdown to Sidebar for JHS

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,6 +47,11 @@
     background: white !important;
   }
 
+
+  ::ng-deep .mat-form-field-underline {
+    display: none;
+  }
+
   .no-select {
     -webkit-user-select: none;
     -moz-user-select: none;
