--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,9 +40,16 @@
     <mat-sidenav #sidenav mode="side" [(opened)]="sidebarOpen">
       <mat-nav-list>
         <a mat-list-item (click)="changePage('welcome')"><mat-icon mat-list-icon>home</mat-icon>Welcome</a>
-        <a mat-list-item (click)="changePage('jhs-nc1')"><mat-icon mat-list-icon>school</mat-icon>JHS: NC1</a>
-        <a mat-list-item (click)="changePage('jhs-nc2')"><mat-icon mat-list-icon>school</mat-icon>JHS: NC2</a>
-        <a mat-list-item (click)="changePage('jhs-nc3')"><mat-icon mat-list-icon>school</mat-icon>JHS: NC3</a>
+        <a mat-list-item>
+          <mat-form-field style="margin-bottom: -1.25em">
+            <mat-icon mat-list-icon>school</mat-icon> Junior High School
+            <mat-select>
+              <mat-option (click)="changePage('jhs-nc1')">New Crown 1</mat-option>
+              <mat-option (click)="changePage('jhs-nc2')">New Crown 2</mat-option>
+              <mat-option (click)="changePage('jhs-nc3')">New Crown 3</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </a>
         <a mat-list-item (click)="changePage('eigomura')"><mat-icon mat-list-icon>groups</mat-icon>英語村</a>
         <a mat-list-item (click)="changePage('misc')"><mat-icon mat-list-icon>translate</mat-icon>Miscellaneous</a>
       </mat-nav-list>
