Adding subtitle to titles for JHS

--- a/src/app/files/file.tree.component.html
+++ b/src/app/files/file.tree.component.html
@@ -6,6 +6,9 @@
                 <span>{{title}}</span>
              </div>
             </mat-card-title>
+            <mat-card-subtitle class="form-sub-header" fxLayoutAlign="center center" *ngIf="subtitle">
+              {{subtitle}}
+            </mat-card-subtitle>
         </mat-card-header>
   
         <mat-divider></mat-divider>
