--- a/src/app/files/file.tree.component.scss
+++ b/src/app/files/file.tree.component.scss
@@ -92,6 +92,17 @@
     margin: 0;
   }
 
+  .form-sub-header {
+    /* matches one above this */
+    font-size: 1.6rem !important;
+    font: 400 20px/30px Roboto, 'Helvetica Neue', sans-serif;
+    letter-spacing: normal;
+    color: rgba(0, 0, 0, 0.54);
+    user-select: none;
+    margin-bottom: 10px;
+  }
+  
+
   .form-content {
     margin-top: 30px;
     font: 400 16px/24px Roboto, 'Helvetica Neue', sans-serif;
